# OPENGL_CPP_ENGINE

./: CMakeLists.txt
Assets/Shaders/: common.frag.glsl  common.vert.glsl  lamp.frag.glsl  lamp.vert.glsl
src/: config.h  main.cpp
src/App/: App.cpp  App.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/Core/: IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Entities/: Ball.cpp  Ball.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  Lamp.cpp  Lamp.h
src/vendors/: std_image.cpp
